2014-08-28  François Déchelle  <francois@dechelle.net>

	* changed scan function to set module report

2014-08-06  François Déchelle  <francois@dechelle.net>

	* implemented first version; works and scans ok

